--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
-theme: minima
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+gem "github-pages", group: :jekyll_plugins
+
+title: "Susie 的个人主页"
+description:"欢迎访问我的创意空间"
