--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: "Susie's Space"
-description: "欢迎访问我的创意空间"
+#title: "Susie's Space"
+#description: "欢迎访问我的创意空间"
 # theme: jekyll-theme-cayman
